# commandless

./: .dockerignore  .env.example  .gitignore  .vercelignore  DEPLOYMENT.md  README.md  index.html  package-lock.json  package.json  render.yaml  tailwind.config.js  tsconfig.json  vercel.json  vite.config.ts
.claude/: launch.json
.github/workflows/: release.yml
api/: health.js
api/ai/: command.js  explain.js
scripts/: build-video.sh  downloads.mjs  make-icon.mjs  video-cards.mjs  video-frames.mjs  voiceover.sh
server/: .env.example  Dockerfile  README.md  core.mjs  index.mjs  loadenv.mjs
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  pty.rs  sys.rs
src/components/command/: ActionHistory.tsx  CommandCard.tsx  CommandInput.tsx  CommandPalette.tsx  ErrorInsightCard.tsx  IntentBar.tsx  RecipeInputs.tsx  RiskBadge.tsx
src/components/layout/: AppShell.tsx  HistoryDrawer.tsx  TerminalWorkspace.tsx  TopBar.tsx
src/components/onboarding/: OnboardingFlow.tsx
src/components/settings/: SettingsView.tsx
src/components/terminal/: TerminalTabs.tsx  TerminalToolbar.tsx  TerminalView.tsx
src/components/ui/: Button.tsx  (+6 more)
src/hooks/: useCommandRunner.ts  useKeyboardShortcuts.ts  useSuggest.ts
src/lib/: analytics.ts  suggest.ts  types.ts
src/stores/: historyStore.ts  settingsStore.ts  terminalStore.ts  toastStore.ts  uiStore.ts
video/: PRODUCTION.md  SCRIPT.md
video/remotion/: package-lock.json  package.json
(+32 files in other folders)
